force-app/main/default/objects/Shipping_Estimate_Summary__c/Shipping_Estimate_Summary__c.object-meta.xml
<CustomObject>
    <description>Rollup summary object for estimated and actual shipping items.</description>
    <label>Shipping Estimate Summary</label>
    <nameField>
        <displayFormat>ShipEstSum-{0}</displayFormat>
        <label>Shipping Estimate Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Estimates Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>