force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Default_Estimate_Count__c.field-meta.xml
<CustomField>
    <fullName>Default_Estimate_Count__c</fullName>
    <description>Number of Default Estimates On the summary</description>
    <label>Default Estimate Count</label>
    <summaryFilterItems>
        <field>Shipping_Estimate__c.Default_Estimate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Shipping_Estimate__c.Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>