force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Default_Estimates_Exist__c.field-meta.xml
<CustomField>
    <fullName>Default_Estimates_Exist__c</fullName>
    <formula>IF(Default_Estimate_Count__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Estimates Exist</label>
    <type>Checkbox</type>
</CustomField>