force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Default_Summary__c.field-meta.xml
<CustomField>
    <fullName>Default_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default Summary</label>
    <type>Checkbox</type>
</CustomField>