force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Group_PoT_Quantity_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Group_PoT_Quantity_Rollup__c</fullName>
    <formula>Quote_Line_Group__r.Group_PoT_Quantity_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group PoT Quantity Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>