force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Latest_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity__c</fullName>
    <formula>HYPERLINK( Quote_Line_Group__r.SBQQ__Quote__r.SBQQ__Opportunity2__c ,  Quote_Line_Group__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Opportunity</label>
    <type>Text</type>
</CustomField>