force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Latest_Quote__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote__c</fullName>
    <formula>HYPERLINK( Quote_Line_Group__r.SBQQ__Quote__c ,  Quote_Line_Group__r.SBQQ__Quote__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Quote</label>
    <type>Text</type>
</CustomField>