force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Max_Ship_Est_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Ship_Est_Quantity__c</fullName>
    <description>The maximum of the quantities estimated to ship on a single date</description>
    <inlineHelpText>The maximum of the quantities estimated to ship on a single date</inlineHelpText>
    <label>Max Ship Est Quantity</label>
    <summarizedField>Shipping_Estimate__c.Estimated_Shipping_Quantity__c</summarizedField>
    <summaryForeignKey>Shipping_Estimate__c.Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>