force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Number_of_Ship_Est_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ship_Est_Records__c</fullName>
    <description>Number of Shipping Estimate Records</description>
    <inlineHelpText>Number of Shipping Estimate Records</inlineHelpText>
    <label>Number of Ship Est Records</label>
    <summaryForeignKey>Shipping_Estimate__c.Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>