force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Quote_Line_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of the quote line group related to this shipping summary.</description>
    <label>Quote Line Group Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>