force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Shipping_Summary_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Summary_Status__c</fullName>
    <label>Shipping Summary Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>