force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/Total_Estimated_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Quantities__c</fullName>
    <label>Total Estimated Quantities</label>
    <summarizedField>Shipping_Estimate__c.Estimated_Shipping_Quantity__c</summarizedField>
    <summaryForeignKey>Shipping_Estimate__c.Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>