force-app/main/default/objects/Shipping_Estimate_Summary__c/fields/VEP_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>VEP_Opportunity_Type__c</fullName>
    <formula>Quote_Line_Group__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.VEP_Opportunity_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VEP Opportunity Type</label>
    <type>Text</type>
</CustomField>